npm module pusher added

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
-    "mongoose": "^6.1.10"
+    "mongoose": "^6.1.10",
+    "pusher": "^5.0.1"
   }
 }
